[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-std = "0.4.0"
csv = "1.3.0"
hex = "0.4.3"
num-bigint = "0.4.4"
poseidon = { git = "https://github.com/DanTehrani/poseidon" }
rayon = "1.8.0"
serde = { version = "1.0.188", "features" = ["derive"] }
serde_json = "1.0.107"
ark-secp256k1 = "0.4.0"

[dev-dependencies]
ark-std = "0.4.0"

[features]
default = ["ark-std/print-trace"]
